v5.1.0/_sources/generated/pcdsdevices.rtds_ebd.RTDSK0.rst.txt
pcdsdevices.rtds\_ebd.RTDSK0
============================

.. currentmodule:: pcdsdevices.rtds_ebd

.. autoclass:: RTDSK0

    
    
    .. list-table:: Ophyd Device Components
        :header-rows: 1
        :widths: auto

        * - Attribute
          - Class
          - Suffix
          - Docs
          - Kind
          - Notes
    
        * - mpa1
          - :class:`~pcdsdevices.rtds_ebd.PneumaticActuator`
          - ``:MPA:01``
          - 
          - normal
          - Inherited from :class:`~pcdsdevices.rtds_ebd.RTDSBase`
    
        * - mpa2
          - :class:`~pcdsdevices.rtds_ebd.PneumaticActuator`
          - ``:MPA:02``
          - 
          - normal
          - Inherited from :class:`~pcdsdevices.rtds_ebd.RTDSBase`
    

    
    
    
    
    

    
    

    
    
    .. rubric:: Methods

    
    .. automethod:: configure
    .. automethod:: describe
    .. automethod:: get
    .. automethod:: read
    .. automethod:: read_configuration
    .. automethod:: stage_group_instances
    .. automethod:: status
    .. automethod:: stop
    .. automethod:: summary
    .. automethod:: trigger
    
    

    
    
    .. rubric:: Attributes

    
    .. autoattribute:: configuration_attrs
    .. autoattribute:: connected
    .. autoattribute:: hints
    .. autoattribute:: kind
    .. autoattribute:: lightpath_cpts
    .. autoattribute:: mpa3
    .. autoattribute:: mpa4
    .. autoattribute:: needs_parent
    .. autoattribute:: stage_group
    .. autoattribute:: transmission
    
    